--- a/src/index.css
+++ b/src/index.css
@@ -6,13 +6,20 @@
   padding: 0;
   overflow-x: hidden;
   font-family: 'Poppins', sans-serif;
-  background-color: #0f0d0d;
+  /* background-color: #0f0d0d; */
   color: white;
   /* user-select: none; */
+}
+body{
+    background-color: #0f0d0d;
+
 }
 
 html {
   scroll-behavior: smooth;
+}
+.app_outer{
+  margin: 0 50px;
 }
 
 .navbar {
@@ -24,7 +31,9 @@ html {
   z-index: 3;
   position: fixed;
   width: 93vw;
+  background-color: #0f0d0d;
 }
+
 
 .links a {
   margin: 0 10px;
@@ -53,7 +62,7 @@ html {
 .nav-link:hover {
   color: red;
   text-decoration: underline;
-  font-weight: bolder;
+  /* font-weight: bolder; */
 }
 
 .menu-toggle.cross .bar:nth-child(1) {
@@ -81,7 +90,20 @@ html {
   transition: right 0.3s ease;
   z-index: 3;
   position: fixed;
+  background-color: #0f0d0d;
+
 }
+
+
+.logo_link{
+  text-decoration: none;
+transition: ease-in 0.3s;
+}
+.logo_link:hover{
+    cursor: pointer;
+    text-decoration: underline;
+    color: red;
+} 
 
 .show {
   display: flex;
@@ -95,10 +117,13 @@ html {
      flex-wrap: wrap-reverse;
      align-items: center;
      justify-content: center;
-     margin: 50px 50px 0 50px;
-     height: 100vh;
+     margin: 10px 0px 0px 0px;
+     height: 90vh;
 }
 
+.hero_container_outerpart{
+  padding-top: 83px;
+}
 
 
 
@@ -143,6 +168,7 @@ html {
   border-radius: 30px;
   border: 1px solid white;
   transition: ease-in 0.3s;
+  background-color: #0f0d0d;
 }
 
 .btn-home-1{
@@ -155,8 +181,8 @@ html {
 }
 
 .btn-home-1:hover {
-  background-color: black;
-  color: white;
+  background-color: gray;
+  color: black;
 }
 
 .btn-home-2:hover {
@@ -176,15 +202,14 @@ html {
 
 /* about page css */
 
-.About-contener{
+/* .About-contener{
   display: flex;
   flex-direction: column;
   gap: calc(2vw + 60px); 
   align-items: center;
   justify-content: center;
-  margin: 10px 50px 0 50px;
-  height: 100vh;
-}
+  margin: 10px 0px 0 0px;
+} */
 .about_heading{
   text-align: center;
 }
@@ -201,7 +226,7 @@ html {
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
-  /* height: 80vh; */
+  height: 80vh;
 }
 
 .about_info{
@@ -212,23 +237,35 @@ html {
   margin-top: 20px;
 }
 
+.about_outer_main{
+  padding-top: 83px;
+}
+
+.about_heading{
+  text-align: center;
+
+}
+
 
 
 
 /* skill section css */
 
-
+.skill_outer{
+  padding-top: 83px;
+}
 
 .skill_section_flex{
   display: flex;
   justify-content: center;
   align-items: center;
   /* height: 100vh; */
-  margin: 20px 50px 50px 50px;
+  margin: 20px 0px 0px 0px;
   gap: calc(2vw + 60px); 
   flex-wrap: wrap;
   flex-wrap: wrap;
   overflow: hidden;
+  padding: 20px;
 
 
 }
@@ -240,7 +277,15 @@ html {
   text-align: center;
   /* background-color: rgb(107, 106, 106); */
   box-shadow: 0 10px 20px rgba(243, 234, 234, 0.3); /* Popping up shadow */
+  transition: transform 0.3s ease-in-out; /* Smooth transition for the transform property */
+
 }
+
+
+.box:hover {
+  transform: scale(1.05); /* Scale the box on hover to make it appear larger */
+}
+
 
 .box_title{
   margin-bottom: 50px;
@@ -273,6 +318,7 @@ html {
 }
 
 
+
 /* portfolio secion css  */
 
 
@@ -283,10 +329,11 @@ html {
   justify-content: center;
   align-items: center;
   /* height: 100vh; */
-  margin: 20px 50px 50px 50px;
+  margin: 20px 0px 0px 0px;
   gap: calc(2vw + 60px); 
   flex-wrap: wrap;
   overflow: hidden;
+  padding: 20px;
 }
 
 
@@ -294,7 +341,11 @@ html {
   border: solid 1px white;
   border-radius: 20px;
   box-shadow: 0 10px 20px rgba(243, 234, 234, 0.3); /* Popping up shadow */
+  transition: transform 0.3s ease-in-out; 
+}
 
+.portfolio_box:hover {
+  transform: scale(1.05); /* Scale the box on hover to make it appear larger */
 }
 
 .portimg{
@@ -323,6 +374,7 @@ html {
   cursor: pointer;
   border: solid 1px white;
   transition: ease-in 0.2s;
+  background-color: #0f0d0d;
 }
 
 .pbtn:hover{
@@ -335,6 +387,117 @@ html {
 }
 
 
+/* contant css */
+
+.form_container{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+}
+
+
+form {
+  width: 80%;
+  margin-bottom: 30px;
+
+  padding: 90px 20px 20px 20px;
+  /* background-color: #000; */
+  border-radius: 20px;
+  border: 1px solid white;
+  box-shadow: 0 10px 20px rgba(243, 234, 234, 0.3); /* Popping up shadow */
+}
+
+label {
+  display: block;
+  margin-bottom: 8px;
+}
+
+input,
+textarea {
+  width: 100%;
+  padding: 8px;
+  margin-bottom: 16px;
+  box-sizing: border-box;
+  border: 1px solid #444;
+  border-radius: 4px;
+  background-color: #333;
+  color: white;
+}
+
+input[type="submit"] {
+  background-color: #4CAF50;
+  color: white;
+  cursor: pointer;
+}
+
+input[type="submit"]:hover {
+  background-color: #0eb317;
+}
+
+/* Optional: Style the textarea */
+textarea {
+  resize: vertical;
+}
+
+.alert_div{
+  text-align: center;
+}
+.success{
+  color: #0eb317;
+  font-weight: bolder;
+
+}
+
+.fail{
+  color: red;
+  font-weight: bolder;
+}
+
+/* footer section css code  */
+
+.footer{
+  background-color: white;
+}
+.footer_flex{
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-between;
+  flex-wrap: wrap-reverse;
+  margin: 30px 20px 20px 20px;
+}
+
+.meInfo{
+  width: 33%;
+}
+
+.center_text{
+  text-align: center;
+
+}
+
+
+.social{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+ background-color: #4c4747;
+}
+
+
+.logo_social{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+}
+
+.logo_social h1:hover{
+  color: black;
+  /* background-color: red; */
+}
 
 
 
@@ -342,6 +505,10 @@ html {
 @media only screen and (max-width: 774px) {
   body {
     overflow: hidden;
+  }
+
+  .app_outer{
+    margin: 0 15px;
   }
 
   .menu-toggle {
@@ -379,14 +546,15 @@ html {
    
   }
   .hero-container{
-    margin: 70px 20px -70px 20px;
+    margin: 0px 0px 0px 0px;
     height: auto;
 
   }
 
-  .About-contener{
-    margin: 150px 20px 30px 20px;
+  /* new */
+  .about_flex_container{
     height: auto;
+    /* padding: 20px; */
   }
 
   .home-content{
@@ -417,7 +585,12 @@ html {
   }
 
   .about_outer_main{
-    margin-top: 10px;
+    padding-top: 83px;
+  }
+
+  .about_heading{
+    text-align: center;
+    margin-bottom: 40px;
   }
 
   .hero_container_outerpart{
@@ -429,6 +602,11 @@ html {
     padding-top: 70px;
   }
   
+
+  .meInfo{
+    width: 90%;
+  }
+
   
 }
 
